@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-12T16:18:00Z",
+  "timestamp" : "2022-05-13T01:08:40Z",
   "count_outdated" : 264,
   "uniques_outdated" : 130,
-  "count" : 297,
+  "count" : 298,
   "uniques" : 154,
   "clones" : [
     {
@@ -70,8 +70,8 @@
     },
     {
       "timestamp": "2022-05-12T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 0, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
