@@ -1,5 +1,5 @@
 {
-  "count": 33,
+  "count": 34,
   "uniques": 14,
   "clones": [
     {
@@ -49,7 +49,7 @@
     },
     {
       "timestamp": "2022-05-12T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
